fixed overlapping

--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ th {
 }
 
 .user:hover {
-  margin-bottom: 25vh;
+  margin-bottom: 180px;
 }
 
 .fade-out {
